Creates the basic client structure for the voting system to be visible in the browser.

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "VotingTutorial",
+  "name": "VotingTutorialServer",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
