--- a/client/package.json
+++ b/client/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
+  },
+  "babel": {
+    "presets": ["es2015", "react"]
   }
 }
